
Per la spiegazione degli stati, vedere https://docs.netapp.com/us-en/bluexp-classification/task-managing-repo-scanning.html["Modificare le impostazioni di scansione"].



== 15 maggio 2024



=== Versione 1,31

.La classificazione è disponibile come servizio core all'interno di BlueXP
La classificazione BlueXP è ora disponibile come funzionalità core all'interno di BlueXP senza costi aggiuntivi per un massimo di 500 TiB di dati sottoposti a scansione. Non è richiesta alcuna licenza di classificazione o abbonamento a pagamento. Mentre concentriamo la funzionalità di classificazione BlueXP sulla scansione dei sistemi storage NetApp con questa nuova versione, alcune funzionalità legacy saranno disponibili solo per i clienti che avevano precedentemente pagato per una licenza. L'utilizzo di tali funzioni legacy scadrà quando il contratto a pagamento avrà raggiunto la data di fine.

link:reference-free-paid.html["Ulteriori informazioni sulle funzioni obsolete"].



== 01 aprile 2024



=== Versione 1,30

.Supporto aggiunto per la classificazione RHEL v8,8 e v9,3 BlueXP
Questa versione fornisce il supporto per Red Hat Enterprise Linux v8,8 e v9,3 oltre a 9.x, che richiede Podman, anziché il motore Docker. Applicabile a qualsiasi installazione manuale on-premise della classificazione BlueXP.

I seguenti sistemi operativi richiedono l'utilizzo del motore del container Podman e richiedono la classificazione BlueXP versione 1,30 o superiore: Red Hat Enterprise Linux versione 8,8, 9,0, 9,1, 9,2 e 9,3.

Scopri di più https://docs.netapp.com/us-en/bluexp-classification/task-deploy-overview.html["Panoramica sulle implementazioni di classificazione BlueXP"].

La classificazione BlueXP è supportata se installi il connettore su un host RHEL 8 o 9 che risiede on-premise. Non è supportato se l'host RHEL 8 o 9 si trova in AWS, Azure o Google Cloud.

.Opzione per attivare la raccolta del registro di controllo rimossa