@@ -2560,7 +2560,6 @@
   <block id="c01242a219d7b0beaf6377621fd10547" category="doc">Scansione dello storage a oggetti che utilizza il protocollo S3</block>
   <block id="1ba8a6d88a1ff9a34215586899b08a1e" category="paragraph">È possibile gestire la modalità di scansione dei dati in ciascuno degli ambienti di lavoro e delle origini dati. È possibile apportare le modifiche in base al "repository", ovvero apportare modifiche per ogni volume, schema, utente e così via, a seconda del tipo di origine dati che si sta eseguendo la scansione.</block>
   <block id="4cf46b88592b20071552593714707a46" category="paragraph">Se inizialmente è stato selezionato *Map All Volumes* (mappatura di tutti i volumi) o *Map &amp; Classify All Volumes* (mappatura e classificazione di tutti i volumi) quando è stata attivata la classificazione BlueXP per l'ambiente di lavoro in cui risiede il volume di origine, la classificazione BlueXP eseguirà automaticamente la scansione del nuovo volume clonato. Se inizialmente non si è utilizzata una di queste selezioni, è necessario eseguire la scansione di questo nuovo volume <block ref="9c238ad6b45b928020692cb5de74fd06" category="inline-link-macro-rx"></block>.</block>
-  <block id="ac229efd3fa61c5457dcab252996be0b" category="paragraph">La classificazione BlueXP è ora disponibile come funzionalità core all'interno di BlueXP senza costi aggiuntivi per un massimo di 500 TiB di dati sottoposti a scansione. Non è richiesta alcuna licenza di classificazione o abbonamento a pagamento. Mentre concentriamo la funzionalità di classificazione BlueXP sulla scansione dei sistemi storage NetApp con questa nuova versione, alcune funzionalità legacy saranno disponibili solo per i clienti che avevano precedentemente pagato per una licenza. L'utilizzo di tali funzioni legacy scadrà quando il contratto a pagamento avrà raggiunto la data di fine.</block>
   <block id="3607a722a9a09bb6d405f4d84609e858" category="inline-link-macro">Ulteriori informazioni sulle funzioni obsolete</block>
   <block id="1a50d9154328b370f6d9bbbab041964a" category="paragraph"><block ref="671322b9b43cc49264f86b21ef88a11d" category="inline-link-macro-rx"></block>.</block>
   <block id="e2175eca7cd7227e608f98540d53af5e" category="paragraph">La release ha inoltre rimosso le seguenti opzioni:</block>
@@ -2604,7 +2603,6 @@
   <block id="e22ac25b066b201473de7aa700ef5d92" category="cell">Prezzi</block>
   <block id="b24ce0cd392a5b0b8dedc66c25213594" category="cell">Gratuito</block>
   <block id="3b8f7696879f77dfc8c74aa8df8db24b" category="cell">Capacità</block>
-  <block id="1210ad5d6a7beaf8ab7fd7d0808a95ca" category="cell">Limitata a 500 TB</block>
   <block id="a9cec06f0851d8f2722f032a0e63c115" category="cell">Possibilità di visualizzare i metadati dei file*</block>
   <block id="4f40caf952f66945a674f638c61be8d9" category="paragraph">*I seguenti metadati vengono estratti dai file durante le scansioni di mappatura:</block>
   <block id="10fd66f5b4802aee3a88de2a537a57b4" category="list-text">Capacità utilizzata</block>
@@ -3555,4 +3553,11 @@ Dati delle applicazioni di business</block>
   <block id="c10aaeed86973ee0f442f2e7b73b80b8" category="paragraph">Per ulteriori informazioni, vedere <block ref="c56cfb642e9d697265520a2d16e8cbad" category="inline-link-macro-rx"></block>.</block>
   <block id="4c59149345d32f10d4c1edb221d77028" category="paragraph">Ora puoi visualizzare maggiori informazioni sui proprietari dei file acquisiti nella scheda Indagine. Quando visualizzi i metadati di un file nella scheda Indagine, individua il proprietario del file, quindi seleziona **Visualizza dettagli** per vedere il nome utente, l'e-mail e il nome dell'account SAM. Puoi anche visualizzare altri elementi di proprietà di questo utente. Questa funzionalità è disponibile solo per gli ambienti di lavoro con Active Directory.</block>
   <block id="476669d16044da6b8fccc04e3a65c887" category="paragraph">Per ulteriori informazioni, vedere <block ref="202490d1a2feeed942d0b33752539ffd" category="inline-link-macro-rx"></block>.</block>
+  <block id="ba0582c1a4216adac557c97d2f92f869" category="inline-link-macro">installare un altro connettore</block>
+  <block id="bb421402dbabe6eec32567511e69bc2a" category="inline-link-macro">distribuire un'altra istanza di classificazione</block>
+  <block id="7473cbb9b768b471bd45e7579b544a3a" category="inline-link-macro">Utilizzare più connettori</block>
+  <block id="c430d0ad1a785912ff6e7f2d659d752f" category="paragraph">La BlueXP classification non impone limiti alla quantità di dati che può analizzare. Ogni connettore supporta la scansione e la visualizzazione di 500 TiB di dati. Per analizzare più di 500 TiB di dati, <block ref="a34b864875c7f2ebc4a815c94a375e43" category="inline-link-macro-rx"></block> Poi <block ref="a51ca3e7fcece55a05339015489757d6" category="inline-link-macro-rx"></block> . + L'interfaccia utente BlueXP visualizza i dati di un singolo connettore. Per suggerimenti sulla visualizzazione dei dati di più connettori, vedere <block ref="5255e271b4118330c3aac09d32603a12" category="inline-link-macro-rx"></block> .</block>
+  <block id="551fbc3b7472150a5293373b773972d7" category="cell">Limitato a 500 TiB*</block>
+  <block id="acdf9d63036f9706b8165f6f6a7117da" category="paragraph">{asterisco} include::_include/connector-limit.adoc[]</block>
+  <block id="e8c9a8c8c457fc72bf3b116575089845" category="paragraph">La BlueXP classification è ora disponibile come funzionalità principale di BlueXP senza costi aggiuntivi per un massimo di 500 TiB di dati scansionati per connettore. Non è richiesta alcuna licenza di classificazione o abbonamento a pagamento. Mentre concentriamo la funzionalità di classificazione BlueXP sulla scansione dei sistemi storage NetApp con questa nuova versione, alcune funzionalità legacy saranno disponibili solo per i clienti che avevano precedentemente pagato per una licenza. L'utilizzo di tali funzioni legacy scadrà quando il contratto a pagamento avrà raggiunto la data di fine.</block>
 </blocks>
