@@ -63,6 +63,9 @@ Nota: È anche possibile https://docs.netapp.com/us-en/bluexp-setup-admin/task-q
 Come puoi vedere, potrebbero esserci alcune situazioni in cui devi utilizzare https://docs.netapp.com/us-en/bluexp-setup-admin/concept-connectors.html#multiple-connectors["Connettori multipli"].
 
 
+TIP: La BlueXP classification non impone limiti alla quantità di dati che può analizzare. Ogni connettore supporta la scansione e la visualizzazione di 500 TiB di dati. Per analizzare più di 500 TiB di dati, link:https://docs.netapp.com/us-en/bluexp-setup-admin/concept-connectors.html#connector-installation["installare un altro connettore"^] Poi link:https://docs.netapp.com/us-en/bluexp-classification/task-deploy-overview.html["distribuire un'altra istanza di classificazione"] . + L'interfaccia utente BlueXP visualizza i dati di un singolo connettore. Per suggerimenti sulla visualizzazione dei dati di più connettori, vedere link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-manage-multiple-connectors.html#switch-between-connectors["Utilizzare più connettori"^] .
+
+
 
 === Supporto per le regioni governative
 
